# blockparser

./: .gitignore  CMakeLists.txt  README.md  objysetup.cpp  parser.cpp  util.h
cb/: CMakeLists.txt  KafkaUtil.cpp  KafkaUtil.h  KafkaUtil2.cpp  KafkaUtil2.h  kafka.cpp  kafka2.cpp  objy.cpp
config/: allschema.txt  bitcoin.pmd  blockparser.config  temp.config
crypto/: CMakeLists.txt
data/: bitcoin.pmd  bitcoin_schema.xml  reset.sh
h9/: CMakeLists.txt
librdkafka/src/: CMakeLists.txt
librdkafka/src-cpp/: CMakeLists.txt
objy/: CMakeLists.txt  objyAccess.cpp  objyAccess.h  objyMeta.h
scrypt/: CMakeLists.txt
t/: CMakeLists.txt
